--- a/test.html
+++ b/test.html
@@ -3,34 +3,80 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Handyman & Home Services — Askern DN6 | Home Repairs 4U</title>
+<title>Gutter Replacement, Cleaning & Clearing | Askern DN6 | Home Repairs 4U</title>
 
 <link rel="canonical" href="https://steely1968.github.io/">
-<meta name="description" content="Local handyman & home services in Askern DN6 and within a 10-mile radius. Painting, general repairs, fencing, jet washing, TV mounting, plumbing, electrical odd jobs, flat-pack assembly, garden maintenance, loft work, window resealing, flooring, shelving, plastering, gate repairs, blinds and exterior maintenance. Call 07735 873694 for a free quote." />
-<meta name="keywords" content="Handyman Askern, Handyman DN6, Home services Askern, Painting Askern, Flat-pack assembly Askern, Plumbing odd jobs Askern, Garden maintenance Askern" />
-  
+<meta name="description" content="Home Repairs 4U provides gutter replacement, gutter cleaning and gutter clearing across Askern DN6 and all locations within 10 miles. Fast, affordable, fully insured. Call 07735 873694.">
+
 <link rel="preload" as="image" href="images/logo.webp" />
 
 <style>
-/* Core layout & visual accessibility */
-:root{--maxw:980px;--accent:#000;--accent-2:#111}
-html,body{height:100%}
-body{font-family:Arial,Helvetica,sans-serif;margin:0;padding:0;background:#f6f7f8;color:#111;line-height:1.65}
-header{background:#fff;border-bottom:4px solid #27ae60;text-align:center;padding:22px 12px}
-.logo{max-height:90px;width:auto;display:block;margin:0 auto}
-.call-btn{display:inline-block;margin-top:14px;padding:14px 28px;background:var(--accent);color:#fff;text-decoration:none;font-size:18px;font-weight:700;border-radius:6px;border:2px solid var(--accent)}
-.call-btn:hover{background:#222}
-main{max-width:var(--maxw);margin:26px auto;padding:28px;background:#fff;border-radius:6px;box-shadow:0 8px 30px rgba(10,10,10,0.04)}
-h1,h2,h3{color:var(--accent-2);margin-top:0}
-h1{font-size:26px;text-align:center}
-section{margin-bottom:18px}
-ul{margin-left:20px}
-footer{background:#000;color:#fff;text-align:center;padding:20px 12px;margin-top:28px;font-size:14px}
-.meta-note{font-size:13px;color:#666;margin-top:8px}
-@media (max-width:720px){.call-btn{width:86%;max-width:320px}}
+/* GENERAL PAGE STYLES */
+body{
+margin:0;
+padding:0;
+font-family:Arial, sans-serif;
+background:#f9f9f9;
+color:#222;
+line-height:1.65;
+}
+
+/* HEADER */
+header{
+text-align:center;
+padding:25px 10px;
+background:#fff;
+border-bottom:4px solid #27ae60;
+}
+
+/* LOGO (explicit width/height for CLS) */
+.logo{
+max-height:90px;
+width:auto;
+}
+
+/* CALL BUTTON – Highest Contrast (AAA) */
+.call-btn{
+display:inline-block;
+margin-top:18px;
+padding:14px 28px;
+background:#000;
+color:#fff;
+font-size:19px;
+text-decoration:none;
+font-weight:bold;
+border-radius:6px;
+border:2px solid #000;
+}
+.call-btn:hover{
+background:#333;
+color:#fff;
+}
+
+/* CONTENT */
+main{
+max-width:900px;
+margin:0 auto;
+background:#fff;
+padding:25px 15px;
+}
+
+h1,h2,h3{
+color:#111;
+}
+
+/* FOOTER – improved contrast */
+footer{
+background:#000;
+color:#fff;
+text-align:center;
+padding:25px 15px;
+margin-top:40px;
+font-size:14px;
+}
 </style>
 
-<!-- LocalBusiness Schema (updated for handyman services) -->
+<!-- LOCAL BUSINESS SCHEMA -->
 <script type="application/ld+json">
 {
 "@context":"https://schema.org",
@@ -39,7 +85,7 @@ footer{background:#000;color:#fff;text-align:center;padding:20px 12px;margin-top
 "image":"https://steely1968.github.io/images/logo.webp",
 "url":"https://steely1968.github.io/",
 "@id":"https://steely1968.github.io/#business",
-"description":"Local handyman and home services in Askern DN6 and surrounding villages within a 10-mile radius. General repairs, painting, fencing, jet washing, TV mounting, plumbing & electrical odd jobs, flat-pack assembly, garden maintenance, loft work, window resealing, flooring repairs and more.",
+"description":"Gutter replacement, gutter cleaning and gutter clearing in Askern DN6 and all surrounding areas within 10 miles.",
 "telephone":"+447735873694",
 "address":{
 "@type":"PostalAddress",
@@ -53,194 +99,144 @@ footer{background:#000;color:#fff;text-align:center;padding:20px 12px;margin-top
 "geoMidpoint":{"@type":"GeoCoordinates","latitude":53.616,"longitude":-1.152},
 "geoRadius":16093
 },
-"serviceType":[
-"Handyman services",
-"General repairs",
-"Painting & decorating",
-"Fencing",
-"Jet washing",
-"TV mounting",
-"Small plumbing fixes",
-"Electrical odd jobs",
-"Flat-pack assembly",
-"Garden maintenance",
-"Loft insulation & boarding",
-"Window resealing",
-"Flooring repairs",
-"Shelving & storage",
-"Plaster patching",
-"Gate repairs",
-"Blinds & curtain rails",
-"Exterior maintenance"
-],
-"openingHoursSpecification":[
-{
+"openingHoursSpecification":[{
 "@type":"OpeningHoursSpecification",
-"dayOfWeek":["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],
-"opens":"07:30",
-"closes":"19:00"
-}
+"dayOfWeek":[
+"Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
 ],
-"paymentAccepted":"Cash, Credit Card",
-"priceRange":"£"
+"opens":"07:00","closes":"20:00"
+}],
+"serviceType":[
+"Gutter replacement",
+"Gutter cleaning",
+"Gutter clearing",
+"Roofline repairs",
+"Downpipe repairs"
+]
 }
 </script>
 
-<!-- FAQ Schema -->
+<!-- FAQ SCHEMA -->
 <script type="application/ld+json">
 {
 "@context":"https://schema.org",
 "@type":"FAQPage",
 "mainEntity":[
-{"@type":"Question","name":"Do you cover my area around Askern?","acceptedAnswer":{"@type":"Answer","text":"Yes — we cover Askern DN6 and all towns and villages within a 10-mile radius. Call to confirm your address."}},
-{"@type":"Question","name":"Can you do one-off odd jobs?","acceptedAnswer":{"@type":"Answer","text":"Absolutely — from tap replacements and door adjustments to TV mounting and flat-pack assembly, we handle short jobs and larger projects."}},
-{"@type":"Question","name":"Are you insured and qualified?","acceptedAnswer":{"@type":"Answer","text":"Yes — Home Repairs 4U is fully insured and experienced with safe ladder use, hand tools and relevant small trades. For specialised electrical or gas work we partner with qualified contractors."}},
-{"@type":"Question","name":"How do I get a quote?","acceptedAnswer":{"@type":"Answer","text":"Call 07735 873694 for a free consultation or request a written quote. We aim to be transparent with fixed-price options where possible."}}
-]
+{
+"@type":"Question",
+"name":"Do gutters really need regular cleaning?",
+"acceptedAnswer":{"@type":"Answer","text":"Yes. Cleaning twice a year prevents damp, mould, rot and water damage."}
+},
+{
+"@type":"Question",
+"name":"How far do you travel from Askern DN6?",
+"acceptedAnswer":{"@type":"Answer","text":"We cover all areas within a 10-mile radius including Campsall, Norton, Skellow, Carcroft, Adwick and more."}
+},
+{
+"@type":"Question",
+"name":"Do you repair and replace guttering?",
+"acceptedAnswer":{"@type":"Answer","text":"Yes. We replace cracked, sagging, leaking or outdated UPVC guttering with long-lasting modern systems."}
+},
+{
+"@type":"Question",
+"name":"Are same-day bookings available?",
+"acceptedAnswer":{"@type":"Answer","text":"Yes. We aim to offer same-day or next-day service whenever possible."}
 }
+]}
 </script>
 
 </head>
+
 <body>
 
 <header>
-<!-- explicit width/height for CLS; CSS preserves visual size (max-height:90px) -->
 <img src="images/logo.webp"
 alt="Home Repairs 4U – Handyman & Home Services in Askern DN6"
 class="logo"
 width="600" height="200"
 loading="eager">
 <br>
-<a class="call-btn" href="tel:07735873694" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
-<div class="meta-note">Serving Askern DN6 and a 10-mile radius — fast response for emergency jobs</div>
+<a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
 </header>
 
-<main role="main" aria-labelledby="main-heading">
-<h1 id="main-heading">Handyman & Home Services — Askern DN6 (10-mile radius)</h1>
+<main>
 
-<section aria-labelledby="intro">
-<h2 id="intro">Local, Trusted Handyman Solutions</h2>
-<p>
-Home Repairs 4U offers a friendly, practical and reliable handyman service across Askern DN6 and surrounding villages within a 10-mile radius. We specialise in a wide range of domestic and outdoor tasks — from small, urgent repairs to planned improvements and seasonal maintenance. Our goal is to make life easier for homeowners and landlords by delivering high-quality workmanship, clear pricing and fast communication.
-</p>
-</section>
-
-<section aria-labelledby="services">
-<h2 id="services">Comprehensive Handyman Services We Provide</h2>
+<h1>Gutter Replacement, Cleaning & Clearing in Askern DN6</h1>
 
 <p>
-Below are the core services we offer — each carried out by experienced tradespeople who respect your home and time:
+Welcome to <strong>Home Repairs 4U</strong>, your trusted local specialist for <strong>gutter replacement</strong>, <strong>gutter cleaning</strong> and <strong>gutter clearing</strong> throughout <strong>Askern DN6</strong> and every surrounding village and town within a <strong>10-mile radius</strong>. With over 30 years of real trade experience, we provide reliable service, clear communication, fair prices and long-lasting workmanship. No call-out fees, no hidden charges — just genuine professional service.
 </p>
 
-<h3>General Repairs</h3>
 <p>
-We fix doors, hinges, locks, small roofline issues, broken handles, loose skirting, dripping taps and more. Quick interventions stop small problems becoming expensive ones.
+Guttering is one of the most important and overlooked parts of any property. When it becomes blocked, cracked or loose, rainwater begins to overflow in all the wrong places. This leads to damp, mould, staining, timber rot, internal leaks and structural issues. The good news: almost all gutter-related problems are preventable with proper maintenance and timely repairs.
 </p>
 
-<h3>Painting & Decorating</h3>
+<h2>Our Professional Gutter Services</h2>
+
+<h3>✔ Gutter Cleaning</h3>
 <p>
-Interior and exterior painting, touch-ups, and preparation work (filling, sanding, priming). We match colours or offer advice on modern, durable finishes that stand up to UK weather.
+Our thorough cleaning service removes moss, leaves, weeds, silt, roof debris and anything else that causes gutters to overflow. We also flush and check your downpipes. Clean gutters protect your home from expensive long-term water damage — especially important for older homes around Askern, Norton and Campsall.
 </p>
 
-<h3>Fencing & Gate Repairs</h3>
+<h3>✔ Gutter Clearing (Blocked Gutters)</h3>
 <p>
-Fence panel replacements, post re-setting, gate realignment and hinge work. We restore garden boundaries to secure and tidy condition.
+If your gutters are overflowing or visibly blocked, our clearing service restores full water flow fast. Blocked gutters are extremely common across DN6 due to trees, storms, moss and general debris. We quickly remove all blockages and ensure your drainage system works exactly as it should.
 </p>
 
-<h3>Jet Washing & Exterior Cleaning</h3>
+<h3>✔ Gutter Replacement</h3>
 <p>
-Driveway, patio and decking jet washing removes grime, algae and moss. We improve kerb appeal and reduce slip hazards.
+When guttering becomes cracked, warped, brittle or poorly fitted, replacement is often the safest and most cost-efficient option. We supply and fit modern UPVC systems designed for durability, strength and long-term weather resistance. Every installation is levelled correctly, securely bracketed and built to handle heavy rainfall.
 </p>
 
-<h3>TV Mounting & Shelving</h3>
+<h2>Areas We Cover – All Within 10 Miles of Askern</h2>
+
 <p>
-Secure TV wall mounting, cable management, shelving installation and floating storage — neat, safe and aligned with your viewing preferences.
+We proudly serve **every village, town, estate and rural area within 10 miles of Askern DN6**, including:
+Askern, Norton, Campsall, Skellow, Carcroft, Adwick-le-Street, Bentley, Arksey, Burghwallis, Owston, Moss, Fenwick, Sykehouse, Braithwaite, Thorpe-in-Balne, Woodlands, Hickleton, Hooton Pagnell, Brodsworth, Sprotbrough, Goldthorpe, Thurnscoe and all surrounding communities.
 </p>
 
-<h3>Plumbing & Small Water Works</h3>
 <p>
-Tap replacements, washer changes, overflow checks, minor leaks, and downpipe inspections. For larger plumbing jobs we coordinate with accredited plumbers.
+If you're unsure whether we cover your location, the answer is almost always yes.
 </p>
 
-<h3>Electrical Odd Jobs</h3>
+<h2>Why Choose Home Repairs 4U?</h2>
+
+<ul>
+<li>✔ 30+ years of hands-on experience</li>
+<li>✔ Fully insured for your peace of mind</li>
+<li>✔ Local, reliable, friendly service</li>
+<li>✔ Clear, honest pricing — no call-out fees</li>
+<li>✔ Same-day or next-day availability where possible</li>
+<li>✔ High-quality UPVC replacements</li>
+<li>✔ Skilled, careful, respectful workmanship</li>
+</ul>
+
+<h2>Long-Form Service Overview (SEO Enhanced)</h2>
 <p>
-Fitting switches, sockets, light fixtures (non-mains complex rewiring), extracting faulty bulbs and replacing fittings. For full rewires we call in certified electricians.
+Water damage caused by poorly maintained guttering is one of the most common and expensive issues experienced by homeowners. When gutters overflow, water runs directly into brickwork, foundations and rooflines. Over time, this creates damp patches inside the home, encourages mould growth and weakens structures. Many customers contact us only once interior symptoms appear, but these can take months to develop. Early maintenance prevents all of this.
 </p>
 
-<h3>Flat-Pack Assembly</h3>
 <p>
-Efficient assembly of cupboards, wardrobes, sheds and garden furniture — with the tools and patience to ensure a clean, correct finish.
+Our gutter services focus on prevention first. We clean, clear, inspect and report any signs of potential failure. If your gutters are starting to sag or pull away from fascia boards, we fix the issue before the damage spreads. If a replacement is needed, we install modern, reliable systems that significantly improve drainage and long-term performance.
 </p>
 
-<h3>Garden Maintenance</h3>
 <p>
-Lawn edging, hedge trimming, shed repairs, fence cleaning and general upkeep that keeps your outside spaces attractive and usable.
+Properties across DN6 — from older stone cottages to modern homes — all benefit from a robust gutter system. With decades of experience working on a wide range of buildings, we understand exactly how to handle each type safely and effectively.
 </p>
 
-<h3>Loft Work & Insulation</h3>
+<h2>Book Your Gutter Service Today</h2>
 <p>
-Loft boarding, loft ladder maintenance and simple insulation upgrades (we follow safety guidance and advise on professional installers for major insulation projects).
+For fast, friendly and professional gutter cleaning, clearing or replacement, contact us anytime. Whether you live in Askern or anywhere within 10 miles, we’re ready to help.
 </p>
 
-<h3>Window Resealing & Exterior Repairs</h3>
-<p>
-Recaulking frames, sealing drafty windows, small frame repairs and ensuring your home is weatherproof.
-</p>
-
-<h3>Flooring Repairs & Shelving</h3>
-<p>
-Floorboard tightening, laminate planks replaced, tile repairs and installation of shelving systems to maximize storage.
-</p>
-
-<h3>Plastering, Patching & Decorating Prep</h3>
-<p>
-Small plaster patches, drywall repairs, and smoothing prior to painting deliver a professional finish.
-</p>
-
-</section>
-
-<section aria-labelledby="process">
-<h2 id="process">How It Works — Simple, Transparent Process</h2>
-<ol>
-<li><strong>Call or message</strong> — quick chat about the job and availability.</li>
-<li><strong>Inspection/quote</strong> — fixed price or clear estimate provided.</li>
-<li><strong>Work arranged</strong> — we book a convenient time and arrive prepared.</li>
-<li><strong>Completion & cleanup</strong> — job checked with you; site left tidy.</li>
-</ol>
-<p class="meta-note">We aim for same-day or next-day appointments for urgent tasks where possible.</p>
-</section>
-
-<section aria-labelledby="local">
-<h2 id="local">Service Area — Askern DN6 & 10-Mile Radius</h2>
-<p>
-We regularly serve Askern and nearby towns and villages including Norton, Campsall, Skellow, Carcroft, Adwick le Street, Bentley, Owston, Brodsworth, Conisbrough, Mexborough, Sprotbrough and many smaller hamlets. If you’re within 10 miles, call us — chances are we cover you.
-</p>
-</section>
-
-<section aria-labelledby="faqs">
-<h2 id="faqs">Common Questions</h2>
-
-<h3>Do you charge a call-out fee?</h3>
-<p>No call-out fees for most local jobs — we’ll tell you up front if a small inspection charge applies for larger diagnostic work.</p>
-
-<h3>Are you insured?</h3>
-<p>Yes — Home Repairs 4U is fully insured and takes safety seriously. For specialist electrical or gas work we use certified partners.</p>
-
-<h3>How long will my job take?</h3>
-<p>Minor jobs often take under two hours. Larger installations or replacements will be scheduled with a clear timescale in the quote.</p>
-
-<h3>How do I book?</h3>
-<p>Call <strong><a href="tel:07735873694">07735 873694</a></strong> or message via the website with your postcode and a short description — we’ll reply promptly.</p>
-</section>
-
-<div style="text-align:center;margin-top:26px;">
-<a class="call-btn" href="tel:07735873694" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+<div style="text-align:center;margin:35px 0;">
+<a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
 </div>
 
 </main>
 
-<footer role="contentinfo">
-© Home Repairs 4U — Handyman & Home Services — Askern DN6 • Serving a 10-mile radius • Call 07735 873694
+<footer>
+© Home Repairs 4U | Gutter Replacement • Cleaning • Clearing | Askern DN6 | Call 07735 873694
 </footer>
 
 </body>
