--- a/services/guttering.html
+++ b/services/guttering.html
@@ -8,7 +8,7 @@
 <link rel="canonical" href="https://steely1968.github.io/">
 <meta name="description" content="Home Repairs 4U provides gutter replacement, gutter cleaning and gutter clearing across Askern DN6 and all locations within 10 miles. Fast, affordable, fully insured. Call 07735 873694.">
 <img src="/logo.webp" alt="Logo">
-<link rel="preload" as="image" href="images/logo.webp" />
+<link rel="preload" as="image" href="/images/logo.webp" />
 
 <style>
 /* GENERAL PAGE STYLES */
