--- a/services/guttering.html
+++ b/services/guttering.html
@@ -150,7 +150,7 @@ font-size:14px;
 <body>
 
 <header>
-<img src="images/logo.webp"
+<img src="/images/logo.webp"
 alt="Home Repairs 4U – Handyman & Home Services in Askern DN6"
 class="logo"
 width="600" height="200"
