--- a/test.html
+++ b/test.html
@@ -1,243 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Gutter Replacement, Cleaning & Clearing | Askern DN6 | Home Repairs 4U</title>
-
-<link rel="canonical" href="https://steely1968.github.io/">
-<meta name="description" content="Home Repairs 4U provides gutter replacement, gutter cleaning and gutter clearing across Askern DN6 and all locations within 10 miles. Fast, affordable, fully insured. Call 07735 873694.">
-
-<link rel="preload" as="image" href="images/logo.webp" />
-
-<style>
-/* GENERAL PAGE STYLES */
-body{
-margin:0;
-padding:0;
-font-family:Arial, sans-serif;
-background:#f9f9f9;
-color:#222;
-line-height:1.65;
-}
-
-/* HEADER */
-header{
-text-align:center;
-padding:25px 10px;
-background:#fff;
-border-bottom:4px solid #27ae60;
-}
-
-/* LOGO (explicit width/height for CLS) */
-.logo{
-max-height:90px;
-width:auto;
-}
-
-/* CALL BUTTON – Highest Contrast (AAA) */
-.call-btn{
-display:inline-block;
-margin-top:18px;
-padding:14px 28px;
-background:#000;
-color:#fff;
-font-size:19px;
-text-decoration:none;
-font-weight:bold;
-border-radius:6px;
-border:2px solid #000;
-}
-.call-btn:hover{
-background:#333;
-color:#fff;
-}
-
-/* CONTENT */
-main{
-max-width:900px;
-margin:0 auto;
-background:#fff;
-padding:25px 15px;
-}
-
-h1,h2,h3{
-color:#111;
-}
-
-/* FOOTER – improved contrast */
-footer{
-background:#000;
-color:#fff;
-text-align:center;
-padding:25px 15px;
-margin-top:40px;
-font-size:14px;
-}
-</style>
-
-<!-- LOCAL BUSINESS SCHEMA -->
-<script type="application/ld+json">
-{
-"@context":"https://schema.org",
-"@type":"HomeAndConstructionBusiness",
-"name":"Home Repairs 4U",
-"image":"https://steely1968.github.io/images/logo.webp",
-"url":"https://steely1968.github.io/",
-"@id":"https://steely1968.github.io/#business",
-"description":"Gutter replacement, gutter cleaning and gutter clearing in Askern DN6 and all surrounding areas within 10 miles.",
-"telephone":"+447735873694",
-"address":{
-"@type":"PostalAddress",
-"addressLocality":"Askern",
-"postalCode":"DN6",
-"addressRegion":"South Yorkshire",
-"addressCountry":"GB"
-},
-"areaServed":{
-"@type":"GeoCircle",
-"geoMidpoint":{"@type":"GeoCoordinates","latitude":53.616,"longitude":-1.152},
-"geoRadius":16093
-},
-"openingHoursSpecification":[{
-"@type":"OpeningHoursSpecification",
-"dayOfWeek":[
-"Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
-],
-"opens":"07:00","closes":"20:00"
-}],
-"serviceType":[
-"Gutter replacement",
-"Gutter cleaning",
-"Gutter clearing",
-"Roofline repairs",
-"Downpipe repairs"
-]
-}
-</script>
-
-<!-- FAQ SCHEMA -->
-<script type="application/ld+json">
-{
-"@context":"https://schema.org",
-"@type":"FAQPage",
-"mainEntity":[
-{
-"@type":"Question",
-"name":"Do gutters really need regular cleaning?",
-"acceptedAnswer":{"@type":"Answer","text":"Yes. Cleaning twice a year prevents damp, mould, rot and water damage."}
-},
-{
-"@type":"Question",
-"name":"How far do you travel from Askern DN6?",
-"acceptedAnswer":{"@type":"Answer","text":"We cover all areas within a 10-mile radius including Campsall, Norton, Skellow, Carcroft, Adwick and more."}
-},
-{
-"@type":"Question",
-"name":"Do you repair and replace guttering?",
-"acceptedAnswer":{"@type":"Answer","text":"Yes. We replace cracked, sagging, leaking or outdated UPVC guttering with long-lasting modern systems."}
-},
-{
-"@type":"Question",
-"name":"Are same-day bookings available?",
-"acceptedAnswer":{"@type":"Answer","text":"Yes. We aim to offer same-day or next-day service whenever possible."}
-}
-]}
-</script>
-
-</head>
-
-<body>
-
-<header>
-<img src="images/logo.webp"
-alt="Home Repairs 4U – Handyman & Home Services in Askern DN6"
-class="logo"
-width="600" height="200"
-loading="eager">
-<br>
-<a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
-</header>
-
-<main>
-
-<h1>Gutter Replacement, Cleaning & Clearing in Askern DN6</h1>
-
-<p>
-Welcome to <strong>Home Repairs 4U</strong>, your trusted local specialist for <strong>gutter replacement</strong>, <strong>gutter cleaning</strong> and <strong>gutter clearing</strong> throughout <strong>Askern DN6</strong> and every surrounding village and town within a <strong>10-mile radius</strong>. With over 30 years of real trade experience, we provide reliable service, clear communication, fair prices and long-lasting workmanship. No call-out fees, no hidden charges — just genuine professional service.
-</p>
-
-<p>
-Guttering is one of the most important and overlooked parts of any property. When it becomes blocked, cracked or loose, rainwater begins to overflow in all the wrong places. This leads to damp, mould, staining, timber rot, internal leaks and structural issues. The good news: almost all gutter-related problems are preventable with proper maintenance and timely repairs.
-</p>
-
-<h2>Our Professional Gutter Services</h2>
-
-<h3>✔ Gutter Cleaning</h3>
-<p>
-Our thorough cleaning service removes moss, leaves, weeds, silt, roof debris and anything else that causes gutters to overflow. We also flush and check your downpipes. Clean gutters protect your home from expensive long-term water damage — especially important for older homes around Askern, Norton and Campsall.
-</p>
-
-<h3>✔ Gutter Clearing (Blocked Gutters)</h3>
-<p>
-If your gutters are overflowing or visibly blocked, our clearing service restores full water flow fast. Blocked gutters are extremely common across DN6 due to trees, storms, moss and general debris. We quickly remove all blockages and ensure your drainage system works exactly as it should.
-</p>
-
-<h3>✔ Gutter Replacement</h3>
-<p>
-When guttering becomes cracked, warped, brittle or poorly fitted, replacement is often the safest and most cost-efficient option. We supply and fit modern UPVC systems designed for durability, strength and long-term weather resistance. Every installation is levelled correctly, securely bracketed and built to handle heavy rainfall.
-</p>
-
-<h2>Areas We Cover – All Within 10 Miles of Askern</h2>
-
-<p>
-We proudly serve **every village, town, estate and rural area within 10 miles of Askern DN6**, including:
-Askern, Norton, Campsall, Skellow, Carcroft, Adwick-le-Street, Bentley, Arksey, Burghwallis, Owston, Moss, Fenwick, Sykehouse, Braithwaite, Thorpe-in-Balne, Woodlands, Hickleton, Hooton Pagnell, Brodsworth, Sprotbrough, Goldthorpe, Thurnscoe and all surrounding communities.
-</p>
-
-<p>
-If you're unsure whether we cover your location, the answer is almost always yes.
-</p>
-
-<h2>Why Choose Home Repairs 4U?</h2>
-
-<ul>
-<li>✔ 30+ years of hands-on experience</li>
-<li>✔ Fully insured for your peace of mind</li>
-<li>✔ Local, reliable, friendly service</li>
-<li>✔ Clear, honest pricing — no call-out fees</li>
-<li>✔ Same-day or next-day availability where possible</li>
-<li>✔ High-quality UPVC replacements</li>
-<li>✔ Skilled, careful, respectful workmanship</li>
-</ul>
-
-<h2>Long-Form Service Overview (SEO Enhanced)</h2>
-<p>
-Water damage caused by poorly maintained guttering is one of the most common and expensive issues experienced by homeowners. When gutters overflow, water runs directly into brickwork, foundations and rooflines. Over time, this creates damp patches inside the home, encourages mould growth and weakens structures. Many customers contact us only once interior symptoms appear, but these can take months to develop. Early maintenance prevents all of this.
-</p>
-
-<p>
-Our gutter services focus on prevention first. We clean, clear, inspect and report any signs of potential failure. If your gutters are starting to sag or pull away from fascia boards, we fix the issue before the damage spreads. If a replacement is needed, we install modern, reliable systems that significantly improve drainage and long-term performance.
-</p>
-
-<p>
-Properties across DN6 — from older stone cottages to modern homes — all benefit from a robust gutter system. With decades of experience working on a wide range of buildings, we understand exactly how to handle each type safely and effectively.
-</p>
-
-<h2>Book Your Gutter Service Today</h2>
-<p>
-For fast, friendly and professional gutter cleaning, clearing or replacement, contact us anytime. Whether you live in Askern or anywhere within 10 miles, we’re ready to help.
-</p>
-
-<div style="text-align:center;margin:35px 0;">
-<a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
-</div>
-
-</main>
-
-<footer>
-© Home Repairs 4U | Gutter Replacement • Cleaning • Clearing | Askern DN6 | Call 07735 873694
-</footer>
-
-</body>
-</html>
+<section aria-labelledby="guttering-services" style="margin-top:28px;">
+<h2 id="guttering-services">Guttering Services</h2>
+<p>Professional gutter cleaning and repairs to protect your home from leaks, damp and overflow issues. Fast local service around Askern DN6.</p>
+<a class="call-btn" href="https://steely1968.github.io/services/guttering">View Guttering Services</a>
+</section>
