--- a/index.html
+++ b/index.html
@@ -198,6 +198,16 @@ Small plaster patches, drywall repairs, and smoothing prior to painting deliver 
 </p>
 
 </section>
+ <section aria-labelledby="guttering-services" style="margin-top:28px;">
+<h2 id="guttering-services">Guttering Services</h2>
+<p>Professional gutter cleaning and repairs to protect your home from leaks, damp and overflow issues. Fast local service around Askern DN6.</p>
+<a href="https://steely1968.github.io/services/guttering"
+style="display:inline-block;padding:14px 28px;background:#000;color:#fff;
+text-decoration:none;font-size:18px;font-weight:700;border-radius:6px;
+border:2px solid #000;margin-top:10px;">
+View Guttering Services
+</a>
+</section>
 
 <section aria-labelledby="process">
 <h2 id="process">How It Works — Simple, Transparent Process</h2>
