--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@ alt="Home Repairs 4U – Handyman & Home Services in Askern DN6"
 class="logo"
 width="600" height="200"
 loading="eager">
+<div style="text-align:center; margin-top:10px;">
+<a href="https://steely1968.github.io/"
+style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">
+Home
+</a>
+</div>
 <br>
 <a class="call-btn" href="tel:07735873694" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
 <div class="meta-note">Serving Askern DN6 and a 10-mile radius — fast response for emergency jobs</div>
