--- a/services/guttering.html
+++ b/services/guttering.html
@@ -155,6 +155,12 @@ alt="Home Repairs 4U – Handyman & Home Services in Askern DN6"
 class="logo"
 width="600" height="200"
 loading="eager">
+  <div style="text-align:center; margin-top:10px;">
+<a href="https://steely1968.github.io/"
+style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">
+Home
+</a>
+</div>
 <br>
 <a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
 </header>
