--- a/index.html
+++ b/index.html
@@ -215,13 +215,13 @@ View Guttering Services
 </a>
 </section>
  <section aria-labelledby="pressure-washing" style="margin-top:28px;">
-<h2 id="presuure-washing">Guttering Services</h2>
-<p>Professional gutter cleaning and repairs to protect your home from leaks, damp and overflow issues. Fast local service around Askern DN6.</p>
-<a href="https://steely1968.github.io/services/guttering"
+<h2 id="presuure-washing">Pressure Washing</h2>
+<p>Our pressure washing service is one of the most effective ways to restore the external surfaces of your property.</p>
+<a href="https://steely1968.github.io/services/pressure-washing"
 style="display:inline-block;padding:14px 28px;background:#000;color:#fff;
 text-decoration:none;font-size:18px;font-weight:700;border-radius:6px;
 border:2px solid #000;margin-top:10px;">
-View Guttering Services
+View Pressure Washing Services
 </a>
 </section>
 <section aria-labelledby="process">
