--- a/index.html
+++ b/index.html
@@ -224,6 +224,16 @@ border:2px solid #000;margin-top:10px;">
 View Pressure Washing Services
 </a>
 </section>
+<section aria-labelledby="exterior-decorating" style="margin-top:28px;">
+<h2 id="exterior-decorating-washing">Exterior Decorating</h2>
+<p>We provide local high-quality exterior house painting, fence painting, and iron rail painting</p>
+<a href="https://steely1968.github.io/services/exterior-decorating"
+style="display:inline-block;padding:14px 28px;background:#000;color:#fff;
+text-decoration:none;font-size:18px;font-weight:700;border-radius:6px;
+border:2px solid #000;margin-top:10px;">
+View Exterior Decorating Services
+</a>
+</section>
 <section aria-labelledby="process">
 <h2 id="process">How It Works — Simple, Transparent Process</h2>
 <ol>
