--- a/index.html
+++ b/index.html
@@ -229,6 +229,16 @@ border:2px solid #000;margin-top:10px;">
 View Exterior Decorating Services
 </a>
 </section>
+  <section aria-labelledby="fence-installation" style="margin-top:28px;">
+<h2 id="fence-installation">Fence-Installation</h2>
+<p>Fence and gate services, insatallation, repairs, custom shed, bin tidies and log storage etc. Doncaster</p>
+<a href="https://steely1968.github.io/services/fence-installation"
+style="display:inline-block;padding:14px 28px;background:#000;color:#fff;
+text-decoration:none;font-size:18px;font-weight:700;border-radius:6px;
+border:2px solid #000;margin-top:10px;">
+View Fence Installation
+</a>
+</section>
 <section aria-labelledby="process">
 <h2 id="process">How It Works — Simple, Transparent Process</h2>
 <ol>
