--- a/services/fence-installation.html
+++ b/services/fence-installation.html
@@ -2,32 +2,15 @@
 <html lang="en-GB">
 <head>
 <meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-
-<title>Fence & Gate Fitting in Askern DN6 | Installations, Repairs & Wooden Sheds</title>
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Fence Installation & Gate Fitting in Askern DN6 | Repairs, Sheds & Timber Storage</title>
 
 <link rel="canonical" href="https://steely1968.github.io/">
-
-<meta name="description"
-content="Professional fence & gate fitting in Askern DN6. Full fence installation, fence repairs, wooden sheds, bin tidies and log stores. Local, insured and reliable. Call 07735 873694." />
-
-<meta name="theme-color" content="#ffffff">
-
-<!-- Open Graph -->
-<meta property="og:title" content="Fence & Gate Fitting in Askern DN6 | Installations & Repairs" />
-<meta property="og:description" content="Full fence installation, repairs, gates, sheds, bin tidy units & log stores. Trusted local service in Askern. Call 07735 873694." />
-<meta property="og:image" content="https://steely1968.github.io/images/logo.webp" />
-<meta property="og:type" content="website" />
-
-<!-- Twitter Card -->
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Fence & Gate Fitting in Askern DN6" />
-<meta name="twitter:description" content="Fence installation, repairs, gates, sheds, bin tidies & more. Call 07735 873694." />
+<meta name="description" content="Professional fence installation and gate fitting in Askern DN6. Full fence builds, repairs, wooden shed construction, bin stores and log storage. Call 07735 873694.">
 
 <link rel="preload" as="image" href="/images/logo.webp" />
 
 <style>
-/* GENERAL PAGE STYLES */
 body{
 margin:0;
 padding:0;
@@ -36,40 +19,16 @@ background:#f9f9f9;
 color:#222;
 line-height:1.65;
 }
-
-.skip-link {
-position:absolute;
-left:-999px;
-top:auto;
-width:1px;
-height:1px;
-overflow:hidden;
-}
-.skip-link:focus {
-position:static;
-width:auto;
-height:auto;
-padding:10px;
-background:#000;
-color:#fff;
-z-index:999;
-}
-
-/* HEADER */
 header{
 text-align:center;
 padding:25px 10px;
 background:#fff;
 border-bottom:4px solid #27ae60;
 }
-
-/* LOGO */
 .logo{
 max-height:90px;
 width:auto;
 }
-
-/* CALL BUTTON */
 .call-btn{
 display:inline-block;
 margin-top:18px;
@@ -86,21 +45,15 @@ border:2px solid #000;
 background:#333;
 color:#fff;
 }
-
-/* CONTENT */
 main{
 max-width:900px;
 margin:0 auto;
 background:#fff;
 padding:25px 15px;
 }
-
 h1,h2,h3{
 color:#111;
-line-height:1.3;
 }
-
-/* FOOTER */
 footer{
 background:#000;
 color:#fff;
@@ -111,65 +64,72 @@ font-size:14px;
 }
 </style>
 
-<!-- IMPROVED SCHEMA -->
+<!-- UPDATED SCHEMA FOR FENCING & TIMBER SERVICES -->
 <script type="application/ld+json">
 {
-"@context": "https://schema.org",
-"@type": "LocalBusiness",
-"name": "Home Repairs 4U",
-"image": "https://steely1968.github.io/images/logo.webp",
-"@id": "https://steely1968.github.io/#fencing",
-"url": "https://steely1968.github.io/",
-"telephone": "+447735873694",
-"description": "Fence & gate fitting, fence repairs, shed builds, bin tidy units and log stores in Askern DN6 and surrounding areas.",
-"address": {
-"@type": "PostalAddress",
-"addressLocality": "Askern",
-"addressRegion": "South Yorkshire",
-"postalCode": "DN6",
-"addressCountry": "GB"
+"@context":"https://schema.org",
+"@type":"HomeAndConstructionBusiness",
+"name":"Home Repairs 4U",
+"image":"https://steely1968.github.io/images/logo.webp",
+"url":"https://steely1968.github.io/",
+"description":"Professional fence installation, gate fitting, fence repairs, shed builds, wooden bin tidy construction, and log storage solutions in Askern DN6.",
+"telephone":"+447735873694",
+"address":{
+"@type":"PostalAddress",
+"addressLocality":"Askern",
+"postalCode":"DN6",
+"addressRegion":"South Yorkshire",
+"addressCountry":"GB"
 },
-"areaServed": {
-"@type": "GeoCircle",
-"geoMidpoint": { "@type":"GeoCoordinates","latitude":53.616, "longitude":-1.152 },
-"geoRadius": 16093
-},
-"openingHours": "Mo-Su 07:00-20:00",
-"serviceType": [
+"serviceType":[
 "Fence Installation",
-"Fence Repairs",
 "Gate Fitting",
+"Fence Repairs",
 "Wooden Shed Builds",
-"Bin Stores",
-"Log Stores"
+"Wooden Bin Stores",
+"Log Storage Construction",
+"Timber Garden Structures"
 ]
 }
 </script>
 
+<!-- UPDATED FAQ SCHEMA -->
 <script type="application/ld+json">
 {
-"@context": "https://schema.org",
-"@type": "FAQPage",
-"mainEntity": [
+"@context":"https://schema.org",
+"@type":"FAQPage",
+"mainEntity":[
 {
-"@type": "Question",
-"name": "Do you install new fences?",
-"acceptedAnswer": { "@type": "Answer", "text": "Yes, we install all types of timber fencing including panels, featheredge, picket, closeboard and post-and-rail systems." }
+"@type":"Question",
+"name":"Do you install full garden fencing?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"Yes, we supply and install complete garden fencing, including panels, posts, gravel boards and gates."
+}
 },
 {
-"@type": "Question",
-"name": "Do you repair damaged fences?",
-"acceptedAnswer": { "@type": "Answer", "text": "We repair panels, posts, rails, storm damage, leaning fences and broken hardware." }
+"@type":"Question",
+"name":"Can you repair damaged fencing?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"We repair broken panels, posts, leaning fencing, storm damage, and failing timber sections."
+}
 },
 {
-"@type": "Question",
-"name": "Can you build custom wooden sheds?",
-"acceptedAnswer": { "@type": "Answer", "text": "Yes. We design and build sheds to any size, including reinforced floors, windows and storage features." }
+"@type":"Question",
+"name":"Do you build sheds and timber storage?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"Yes, we build custom wooden sheds, bin stores and log storage units designed to fit your space."
+}
 },
 {
-"@type": "Question",
-"name": "Do you build bin tidies and log stores?",
-"acceptedAnswer": { "@type": "Answer", "text": "We build durable, ventilated bin storage units and log stores to fit your space and needs." }
+"@type":"Question",
+"name":"Do you cover areas outside Askern?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"We work across a 10-mile radius of Askern, including Campsall, Norton, Skellow, Carcroft, Adwick and nearby villages."
+}
 }
 ]
 }
@@ -179,150 +139,158 @@ font-size:14px;
 
 <body>
 
-<a href="#maincontent" class="skip-link">Skip to main content</a>
-
-<header role="banner">
-<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200" loading="eager">
+<header>
+<img src="/images/logo.webp"
+alt="Home Repairs 4U logo"
+class="logo"
+width="600" height="200"
+loading="eager">
 <div style="text-align:center; margin-top:10px;">
-<a href="https://steely1968.github.io/" style="font-size:20px; color:#000; text-decoration:none; font-weight:600;" aria-label="Go to homepage">Home</a>
+<a href="https://steely1968.github.io/"
+style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
 </div>
 <br>
-<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U now">📞 Call Now: 07735 873694</a>
+<a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
 </header>
 
-<main id="maincontent">
+<main>
 
-<h1>Fence & Gate Fitting in Askern DN6 – Installation, Repairs & Custom Timber Builds</h1>
+<h1>Fence Installation & Gate Fitting in Askern DN6</h1>
 
 <p>
-Welcome to <strong>Home Repairs 4U</strong> — your experienced local specialist for <strong>fence installation, fence repairs, wooden gates, sheds, bin tidy units and log stores</strong> throughout Askern DN6 and surrounding villages.
-Our focus is long-lasting workmanship, clear communication, and providing solutions that genuinely suit your property.
+Welcome to <strong>Home Repairs 4U</strong> — your trusted local installer for <strong>fencing, gates, sheds, and timber storage</strong> across Askern DN6 and surrounding areas.
+Whether you need a brand new boundary fence, a secure garden gate, repairs after storm damage, or a custom-built wooden shed, we provide high-quality workmanship designed to last.
+</p>
+
+<p>
+With years of hands-on experience working with timber and outdoor structures, we focus on durable construction, reliable installations, and finishes that stand up to the elements. Our goal is to improve your property’s privacy, security and appearance with well-built, long-lasting solutions.
 </p>
 
 <h2>Full Fence Installation</h2>
 
 <p>
-A new fence is one of the most effective ways to improve privacy, security and the overall look of your garden.
-We supply and install a full range of fences including:
+A well-installed fence provides privacy, security and a clean boundary to your property. We install a wide range of fencing styles, including:
 </p>
 
 <ul>
-<li>Featheredge and closeboard systems</li>
-<li>Standard and heavy-duty fence panels</li>
-<li>Picket and decorative fencing</li>
-<li>Post-and-rail and garden boundaries</li>
-<li>Fences with gravel boards and concrete posts</li>
+<li>Closeboard fencing</li>
+<li>Feather edge panels</li>
+<li>Lap panels</li>
+<li>Decorative panels</li>
+<li>Post and gravel board systems</li>
+<li>Trellis and garden dividers</li>
 </ul>
 
 <p>
-Every installation begins with accurate measurement and ground assessment. We set posts at correct depth, ensure clean straight lines and use outdoor-rated fixings. Where needed, we also remove old fencing and level the ground.
+Every installation is carried out using strong fixings, properly set posts and level alignment. We remove old fencing where needed and ensure the new structure is built to a high standard with long-term durability in mind.
+</p>
+
+<h2>Gate Fitting & Garden Access Solutions</h2>
+
+<p>
+We supply and fit all types of timber gates, including:
+</p>
+
+<ul>
+<li>Side gates</li>
+<li>Driveway gates</li>
+<li>Garden access gates</li>
+<li>Decorative timber gates</li>
+<li>Security-focused gates with heavy-duty fittings</li>
+</ul>
+
+<p>
+All gates are installed with quality hinges, latches and supports to ensure smooth operation and reliable performance year after year.
 </p>
 
 <h2>Fence Repairs</h2>
 
 <p>
-Not every fence needs replacing. Many issues can be fixed quickly, extending your fence’s life by years.
-We repair:
+Broken or leaning fence? Storm damage? Rotten posts?
+We offer quick, effective repairs for all types of wooden fencing, including:
 </p>
 
 <ul>
-<li>Broken or fallen panels</li>
-<li>Leaning or rotten posts</li>
-<li>Loose or damaged rails</li>
-<li>Storm damage</li>
-<li>Worn or rusted fixings</li>
+<li>Replacing damaged panels</li>
+<li>Fixing or resetting posts</li>
+<li>Repairing storm damage</li>
+<li>Replacing rotted timber sections</li>
+<li>Strengthening weak or unstable fencing</li>
 </ul>
 
 <p>
-We provide honest advice — if a repair is economical, we recommend it. If replacement is better value, we explain why.
+We only use strong, weather-resistant timber and components to extend the lifespan of your fencing and maintain the look of your garden.
 </p>
 
-<h2>Gate Fitting & Gate Repairs</h2>
+<h2>Wooden Shed Construction</h2>
 
 <p>
-A properly fitted gate should be strong, smooth to operate and secure.
-We install:
+If you need extra storage, workspace or a garden building, we construct solid timber sheds built to last.
+Our sheds include:
 </p>
 
 <ul>
-<li>Garden gates</li>
-<li>Side access gates</li>
-<li>Driveway gates</li>
-<li>Made-to-measure timber gates</li>
+<li>Durable timber framing</li>
+<li>Weather-resistant cladding</li>
+<li>Secure doors and hinges</li>
+<li>Optional flooring and shelving</li>
+<li>Bespoke sizing to suit your garden</li>
 </ul>
 
 <p>
-We handle all hardware including hinges, latches, security bolts and frame adjustments. If your gate is dragging or not closing properly, we can realign and repair it.
+Each shed is built on-site for a precise fit and long-term performance.
 </p>
 
-<h2>Wooden Shed Builds</h2>
+<h2>Wooden Bin Stores & Log Storage Units</h2>
 
 <p>
-Our wooden sheds are designed around your space, storage needs and intended use. We build:
+Keep your garden tidy and organised with custom-built wooden storage solutions, including:
 </p>
 
 <ul>
-<li>General garden storage sheds</li>
-<li>Workshops with reinforced flooring</li>
-<li>Tool sheds and lean-to storage</li>
-<li>Sheds with windows and ventilation</li>
+<li>Wheelie bin tidy units</li>
+<li>Double and triple bin stores</li>
+<li>Log storage shelters</li>
+<li>Multi-purpose timber storage</li>
+<li>Made-to-measure garden units</li>
 </ul>
 
 <p>
-We ensure proper structural support, weatherproofing and a long service life.
-Every shed is built to order, not flat-packed.
-</p>
-
-<h2>Bin Tidies & Log Stores</h2>
-
-<p>
-Tidy up your outdoor space with practical wooden enclosures built to your measurements.
-We create:
-</p>
-
-<ul>
-<li>Wheelie bin shelters</li>
-<li>Recycling storage units</li>
-<li>Ventilated log stores</li>
-<li>Combined bin + log storage systems</li>
-</ul>
-
-<p>
-Each unit is designed for easy access, durability and a clean, tidy appearance.
+These structures are designed to be practical, tidy and hard-wearing, helping keep outdoor areas clutter-free while blending neatly with your garden.
 </p>
 
 <h2>Areas We Cover</h2>
 
 <p>
-We work across Askern DN6 and within a 10-mile radius including: Norton, Campsall, Skellow, Carcroft, Adwick, Bentley, Arksey, Burghwallis, Owston, Fenwick, Moss, Woodlands, Thorpe-in-Balne, Hickleton, Hooton Pagnell, Brodsworth, Sprotbrough and surrounding communities.
+We work throughout Askern and all nearby locations within a 10-mile radius, including: Campsall, Norton, Skellow, Carcroft, Adwick, Bentley, Arksey, Burghwallis, Owston, Moss, Fenwick, Sykehouse, Thorpe-in-Balne, Woodlands and surrounding communities.
 </p>
 
-<h2>Why Choose Home Repairs 4U?</h2>
+<h2>Why Choose Us?</h2>
 
 <ul>
-<li>Over 30 years of experience</li>
-<li>Fully insured</li>
-<li>Reliable local service</li>
-<li>High-quality timber and materials</li>
-<li>Transparent pricing</li>
-<li>Friendly and respectful workmanship</li>
+<li>✔ Reliable, local and friendly service</li>
+<li>✔ Strong, long-lasting timber structures</li>
+<li>✔ Fully insured</li>
+<li>✔ Clean, tidy workmanship</li>
+<li>✔ Clear prices with no hidden extras</li>
+<li>✔ Experienced in all types of fencing</li>
 </ul>
 
-<h2>Book Your Free Quote</h2>
+<h2>Book Your Fence or Timber Project Today</h2>
 
 <p>
-To arrange a visit, discuss your project or request advice, call us today.
-We’re always happy to help.
+If you need new fencing, a fitted gate, repairs or a custom-built timber structure, we’re ready to help.
+Call us today to arrange a visit and discuss your project.
 </p>
 
 <div style="text-align:center;margin:35px 0;">
-<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U for a quote">📞 Call Now: 07735 873694</a>
+<a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
 </div>
 
 </main>
 
-<footer role="contentinfo">
-© Home Repairs 4U | Fence & Gate Fitting • Shed Builds • Bin & Log Stores | Askern DN6 | Call 07735 873694
+<footer>
+© Home Repairs 4U | Fencing • Gate Fitting • Repairs • Sheds • Timber Storage | Askern DN6 | Call 07735 873694
 </footer>
 
 </body>
