--- a/index.html
+++ b/index.html
@@ -239,6 +239,16 @@ border:2px solid #000;margin-top:10px;">
 View Fence Installation
 </a>
 </section>
+  <section aria-labelledby="garden" style="margin-top:28px;">
+<h2 id="garden">Garden</h2>
+<p>From regular garden mowing to landscape Gardening</p>
+<a href="https://steely1968.github.io/services/garden"
+style="display:inline-block;padding:14px 28px;background:#000;color:#fff;
+text-decoration:none;font-size:18px;font-weight:700;border-radius:6px;
+border:2px solid #000;margin-top:10px;">
+View Garden Services
+</a>
+</section>
 <section aria-labelledby="process">
 <h2 id="process">How It Works — Simple, Transparent Process</h2>
 <ol>
