--- a/index.html
+++ b/index.html
@@ -249,6 +249,16 @@ border:2px solid #000;margin-top:10px;">
 View Garden Services
 </a>
 </section>
+  <section aria-labelledby="upvc-restoration" style="margin-top:28px;">
+<h2 id="upvc restoration">UPVC Restoration</h2>
+<p>UPVC restoration gutter, fascia, conervatory cleaning and restoration</p>
+<a href="https://steely1968.github.io/services/upvc-restoration"
+style="display:inline-block;padding:14px 28px;background:#000;color:#fff;
+text-decoration:none;font-size:18px;font-weight:700;border-radius:6px;
+border:2px solid #000;margin-top:10px;">
+View UPVC Restoration Services
+</a>
+</section>
 <section aria-labelledby="process">
 <h2 id="process">How It Works — Simple, Transparent Process</h2>
 <ol>
