--- a/test.html
+++ b/test.html
@@ -1,29 +1,241 @@
-simple link
-<section aria-labelledby="guttering-services" style="margin-top:28px;">
-<h2 id="guttering-services">Guttering Services</h2>
-<p>Professional gutter cleaning and repairs to protect your home from leaks, damp and overflow issues. Fast local service around Askern DN6.</p>
-<a class="call-btn" href="https://steely1968.github.io/services/guttering">View Guttering Services</a>
-</section>
+<!DOCTYPE html>
+<html lang="en-GB">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Home Repairs 4U – Exterior Decorating, Fencing, Garden, Gutters, Pressure Washing & uPVC Services in Askern DN6</title>
 
+<link rel="canonical" href="https://steely1968.github.io/">
+<meta name="description" content="Home Repairs 4U provides professional exterior decorating, fence installation, garden maintenance, gutter replacement, pressure washing, and uPVC restoration in Askern DN6 and nearby areas. Call 07735 873694.">
 
-button link
-<section aria-labelledby="guttering-services" style="margin-top:28px;">
-<h2 id="guttering-services">Guttering Services</h2>
-<p>Professional gutter cleaning and repairs to protect your home from leaks, damp and overflow issues. Fast local service around Askern DN6.</p>
-<a href="https://steely1968.github.io/services/guttering"
-style="display:inline-block;padding:14px 28px;background:#000;color:#fff;
-text-decoration:none;font-size:18px;font-weight:700;border-radius:6px;
-border:2px solid #000;margin-top:10px;">
-View Guttering Services
-</a>
-</section>
+<link rel="preload" as="image" href="/images/logo.webp" />
 
+<style>
+body{
+margin:0;
+padding:0;
+font-family:Arial, sans-serif;
+background:#f9f9f9;
+color:#222;
+line-height:1.65;
+}
+header{
+text-align:center;
+padding:25px 10px;
+background:#fff;
+border-bottom:4px solid #27ae60;
+}
+.logo{
+max-height:90px;
+width:auto;
+}
+.call-btn{
+display:inline-block;
+margin-top:18px;
+padding:14px 28px;
+background:#000;
+color:#fff;
+font-size:19px;
+text-decoration:none;
+font-weight:bold;
+border-radius:6px;
+border:2px solid #000;
+}
+.call-btn:hover{
+background:#333;
+color:#fff;
+}
+main{
+max-width:900px;
+margin:0 auto;
+background:#fff;
+padding:25px 15px;
+}
+h1,h2,h3{
+color:#111;
+}
+.service-btn{
+display:inline-block;
+margin-top:15px;
+padding:12px 24px;
+background:#000;
+color:#fff;
+font-size:18px;
+text-decoration:none;
+font-weight:bold;
+border-radius:6px;
+border:2px solid #000;
+}
+.service-btn:hover{
+background:#333;
+color:#fff;
+}
+footer{
+background:#000;
+color:#fff;
+text-align:center;
+padding:25px 15px;
+margin-top:40px;
+font-size:14px;
+}
+</style>
 
+<!-- HOME PAGE SCHEMA -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"LocalBusiness",
+"name":"Home Repairs 4U",
+"image":"https://steely1968.github.io/images/logo.webp",
+"url":"https://steely1968.github.io/",
+"telephone":"+447735873694",
+"address":{
+"@type":"PostalAddress",
+"addressLocality":"Askern",
+"postalCode":"DN6",
+"addressRegion":"South Yorkshire",
+"addressCountry":"GB"
+},
+"description":"Professional home services in Askern DN6 including exterior decorating, fence installation, garden maintenance, gutter replacement, pressure washing, and uPVC restoration.",
+"areaServed":{
+"@type":"GeoCircle",
+"geoMidpoint":{"@type":"GeoCoordinates","latitude":53.616,"longitude":-1.152},
+"geoRadius":16093
+},
+"openingHoursSpecification":[{
+"@type":"OpeningHoursSpecification",
+"dayOfWeek":["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"],
+"opens":"07:00",
+"closes":"20:00"
+}],
+"makesOffer":[
+{"@type":"Offer","itemOffered":{"@type":"Service","name":"Exterior Decorating"}},
+{"@type":"Offer","itemOffered":{"@type":"Service","name":"Fence Installation"}},
+{"@type":"Offer","itemOffered":{"@type":"Service","name":"Garden Maintenance"}},
+{"@type":"Offer","itemOffered":{"@type":"Service","name":"Gutter Replacement"}},
+{"@type":"Offer","itemOffered":{"@type":"Service","name":"Pressure Washing"}},
+{"@type":"Offer","itemOffered":{"@type":"Service","name":"uPVC Restoration"}}
+]
+}
+</script>
 
-header link
+<!-- FAQ SCHEMA -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"FAQPage",
+"mainEntity":[
+{
+"@type":"Question",
+"name":"Which areas do you cover?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"We serve Askern DN6 and a 10-mile radius including Campsall, Norton, Skellow, Carcroft, Adwick, Bentley, and surrounding villages."
+}
+},
+{
+"@type":"Question",
+"name":"Are your services insured?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"Yes, all our services are fully insured to ensure peace of mind and reliable workmanship."
+}
+},
+{
+"@type":"Question",
+"name":"Can I book multiple services at the same time?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"Yes, we can schedule multiple services together for convenience and efficiency."
+}
+},
+{
+"@type":"Question",
+"name":"Do you offer free consultations?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"Yes, we provide free consultations to assess your requirements and give accurate quotes."
+}
+}
+]
+}
+</script>
+
+</head>
+
+<body>
+
+<header>
+<img src="/images/logo.webp"
+alt="Home Repairs 4U logo"
+class="logo"
+width="600" height="200"
+loading="eager">
 <div style="text-align:center; margin-top:10px;">
 <a href="https://steely1968.github.io/"
-style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">
-Home
-</a>
+style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
 </div>
+<br>
+<a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
+</header>
+
+<main>
+
+<h1>Welcome to Home Repairs 4U – Professional Home Services in Askern DN6</h1>
+
+<p>
+At <strong>Home Repairs 4U</strong>, we provide expert home and garden services to homeowners across Askern DN6 and surrounding villages. From enhancing your property’s exterior with decorating, fencing, or landscaping, to restoring uPVC windows and maintaining gutters, we combine years of experience with high-quality materials and workmanship.
+Our team is fully insured, reliable, and committed to delivering results that improve the appearance, function, and value of your home.
+Whether it’s a small one-off job or a comprehensive project covering multiple areas, we are here to make your property look its very best.
+</p>
+
+<h2>Exterior Decorating</h2>
+<p>
+Our professional <strong>exterior decorating service</strong> transforms homes, fences, and iron railings with premium paints and coatings. We take pride in careful surface preparation, including cleaning, sanding, and priming to ensure long-lasting results. From brickwork to timber cladding, our team applies weather-resistant finishes that protect surfaces from rain, frost, and UV damage.
+We tailor every project to your preferences, assisting with colour choice, finish type, and design, so your home stands out with a refreshed, modern, or classic look. With over 30 years of experience, we complete jobs efficiently while maintaining the highest quality standards.
+</p>
+<a href="exterior-decorating.html" class="service-btn">View Exterior Decorating</a>
+
+<h2>Fence Installation</h2>
+<p>
+We offer complete <strong>fence installation and gate fitting</strong> services, covering all types of timber fences, including closeboard, feather edge, lap panels, and decorative designs. Our team installs posts with precision, ensures panels are level, and uses quality fixings for long-lasting results.
+In addition to full installations, we carry out repairs for broken or leaning fences, including post replacement and storm damage restoration. Whether you require boundary fencing, garden dividers, or bespoke timber solutions, our service guarantees structural integrity, security, and aesthetic appeal.
+</p>
+<a href="fence-installation.html" class="service-btn">View Fence Installation</a>
+
+<h2>Garden Maintenance</h2>
+<p>
+Our <strong>garden services</strong> cater to every requirement, from small one-off jobs to full landscaping projects. We handle lawn care, hedge trimming, weeding, planting, and seasonal maintenance, ensuring your garden remains tidy, healthy, and visually appealing.
+For larger projects, we design and implement landscaping solutions, including patios, decorative gravel, raised beds, turfing, and soft planting. Every project is tailored to your space, style, and budget, combining practicality with visual impact. Regular garden maintenance prevents overgrowth, enhances plant health, and creates inviting outdoor spaces for family and entertaining.
+</p>
+<a href="garden-maintenance.html" class="service-btn">View Garden Services</a>
+
+<h2>Gutter Replacement</h2>
+<p>
+Keeping your gutters, fascias, and downpipes in top condition protects your property from water damage. Our <strong>gutter replacement services</strong> include inspection, removal of old or damaged gutters, and installation of high-quality, weather-resistant systems.
+We also provide cleaning, downpipe maintenance, and fascia restoration. Properly maintained gutters prevent leaks, structural damage, and staining to your property exterior. Our expert team ensures installations are secure, aligned, and durable, providing long-term protection and peace of mind.
+</p>
+<a href="gutter-replacement.html" class="service-btn">View Gutter Services</a>
+
+<h2>Pressure Washing</h2>
+<p>
+Our <strong>pressure washing services</strong> refresh and restore all exterior surfaces, including patios, driveways, decking, paths, and brickwork. We remove moss, algae, dirt, and staining to reveal clean, attractive surfaces.
+Pressure washing improves safety by reducing slippery surfaces and enhances kerb appeal, increasing the value of your property. We use professional-grade equipment and safe cleaning methods suitable for all surfaces. Both domestic and commercial properties benefit from our high-quality, reliable exterior cleaning solutions.
+</p>
+<a href="pressure-washing.html" class="service-btn">View Pressure Washing</a>
+
+<h2>uPVC Restoration</h2>
+<p>
+Our <strong>uPVC restoration services</strong> bring windows, doors, and conservatories back to their original condition. We clean and restore uPVC frames, sills, and fittings, remove stains, algae, and weathering, and polish surfaces for long-lasting protection.
+Services include conservatory roof cleaning, gutter and fascia maintenance, and full internal and external valets. We use professional, safe products and techniques to ensure a thorough restoration without damaging seals or frames. A restored uPVC exterior enhances both the appearance and value of your property while ensuring functionality for years to come.
+</p>
+<a href="upvc-restoration.html" class="service-btn">View uPVC Restoration</a>
+
+</main>
+
+<footer>
+© Home Repairs 4U | Exterior Decorating • Fence Installation • Garden Maintenance • Gutter Replacement • Pressure Washing • uPVC Restoration | Askern DN6 | Call 07735 873694
+</footer>
+
+</body>
+</html>
