--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ Whether it’s a small one-off job or a comprehensive project covering multiple 
 Our professional <strong>exterior decorating service</strong> transforms homes, fences, and iron railings with premium paints and coatings. We take pride in careful surface preparation, including cleaning, sanding, and priming to ensure long-lasting results. From brickwork to timber cladding, our team applies weather-resistant finishes that protect surfaces from rain, frost, and UV damage.
 We tailor every project to your preferences, assisting with colour choice, finish type, and design, so your home stands out with a refreshed, modern, or classic look. With over 30 years of experience, we complete jobs efficiently while maintaining the highest quality standards.
 </p>
-<a href="exterior-decorating.html" class="service-btn">View Exterior Decorating</a>
+<a href="/services/exterior-decorating.html" class="service-btn">View Exterior Decorating</a>
 
 <h2>Fence Installation</h2>
 <p>
